[gd_scene load_steps=19 format=3 uid="uid://dhp3ahp0givi0"]

[ext_resource type="Script" uid="uid://bmcovg7aial0q" path="res://menu/escenas/menus/menu_arcade/scripts/menu_arcade.gd" id="1_tst6i"]
[ext_resource type="Script" uid="uid://cf3nggcdk1xvc" path="res://juego/Fondo/scripts/parallax_background.gd" id="2_t4b32"]
[ext_resource type="Texture2D" uid="uid://ba15fau0iij3v" path="res://coso/arcade/assets/Iconos/Ciudad.jpeg" id="3_esleu"]
[ext_resource type="Texture2D" uid="uid://bnyqwf0fs4yvl" path="res://coso/arcade/assets/Iconos/Iconos - copia/Goku.jpg" id="4_fvndv"]
[ext_resource type="Texture2D" uid="uid://bc4klpdpslm58" path="res://coso/arcade/assets/Iconos/Iconos - copia/Vegeta.jpg" id="5_y65eq"]
[ext_resource type="Texture2D" uid="uid://yk5kryxc652w" path="res://coso/arcade/assets/Iconos/Iconos - copia/Gojo.jpg" id="6_5xtk8"]
[ext_resource type="Texture2D" uid="uid://da02rwt2yr4sl" path="res://coso/arcade/assets/Iconos/Iconos - copia/Naruto.jpg" id="7_muj60"]
[ext_resource type="Texture2D" uid="uid://jl7j6ojrb524" path="res://coso/arcade/assets/Iconos/Iconos - copia/Luffy.jpg" id="8_7d1tl"]
[ext_resource type="Texture2D" uid="uid://cbceol5clac5q" path="res://coso/arcade/assets/Iconos/Iconos - copia/Itadori.jpg" id="9_qms0m"]
[ext_resource type="Texture2D" uid="uid://beqmr7r1bi7rm" path="res://coso/arcade/assets/Iconos/Iconos - copia/Sonic.jpg" id="10_it3y6"]
[ext_resource type="Texture2D" uid="uid://cqeke10ynonhn" path="res://coso/arcade/assets/Iconos/Iconos - copia/Shadow.jpg" id="11_icexh"]
[ext_resource type="Texture2D" uid="uid://pbvbsrsrqqpx" path="res://coso/arcade/assets/Iconos/Iconos - copia/Kirby.jpg" id="12_pe2fo"]
[ext_resource type="Texture2D" uid="uid://ct254ucvfimqb" path="res://coso/arcade/assets/Iconos/Iconos - copia/Metal Sonic.jpg" id="13_f6416"]
[ext_resource type="Texture2D" uid="uid://b5w8kp8uckvf7" path="res://coso/arcade/assets/Iconos/Iconos - copia/Knuckles.jpg" id="14_cuyqt"]
[ext_resource type="Texture2D" uid="uid://djkvd1kgqlgvd" path="res://coso/arcade/assets/Iconos/Iconos - copia/Bones.jpg" id="15_u02yh"]
[ext_resource type="Texture2D" uid="uid://c72rsqv6r0rr6" path="res://coso/arcade/assets/Iconos/Torre.png" id="16_nwtr3"]
[ext_resource type="FontFile" uid="uid://bmxy13tbq04nx" path="res://Assets/fuentes/Daydream.ttf" id="17_xxu4m"]
[ext_resource type="Script" uid="uid://bkwlopi4qn32o" path="res://addons/maaacks_menus_template/base/scenes/menus/main_menu/config_name_label.gd" id="18_x2g7x"]

[node name="Arcade_anime" type="Node2D"]
script = ExtResource("1_tst6i")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
script = ExtResource("2_t4b32")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2(1100, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(576, 317)
rotation = 3.13776
scale = Vector2(1.69413, -1.54073)
texture = ExtResource("3_esleu")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(1100, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(193, 331)
scale = Vector2(-0.792778, 0.921748)
texture = ExtResource("4_fvndv")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)
motion_mirroring = Vector2(1100, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(190, 424)
scale = Vector2(-0.693902, 0.814211)
texture = ExtResource("5_y65eq")

[node name="ParallaxLayer4" type="ParallaxLayer" parent="ParallaxBackground"]
scale = Vector2(1.0047, 0.987899)
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(1100, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer4"]
position = Vector2(466.806, 332.018)
scale = Vector2(-0.639059, 0.753581)
texture = ExtResource("6_5xtk8")

[node name="ParallaxLayer5" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(1100, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer5"]
position = Vector2(581, 527)
scale = Vector2(0.59792, 0.692719)

[node name="ParallaxLayer6" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 1)
motion_mirroring = Vector2(1100, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer6"]
position = Vector2(471, 522)
scale = Vector2(-0.639032, 0.819998)
texture = ExtResource("7_muj60")

[node name="ParallaxLayer7" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer7"]
position = Vector2(190, 521)
scale = Vector2(-0.662538, 0.770683)
texture = ExtResource("8_7d1tl")

[node name="ParallaxLayer8" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer8"]
position = Vector2(472, 425)
scale = Vector2(0.73144, 0.711249)
texture = ExtResource("9_qms0m")

[node name="ParallaxLayer13" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer13"]
position = Vector2(759, 320)
scale = Vector2(-0.848766, 0.871176)
texture = ExtResource("10_it3y6")

[node name="ParallaxLayer14" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer14"]
position = Vector2(760, 413)
scale = Vector2(-0.698725, 1)
texture = ExtResource("11_icexh")

[node name="ParallaxLayer15" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer15"]
position = Vector2(763, 510)
scale = Vector2(-0.753374, 1)
texture = ExtResource("12_pe2fo")

[node name="ParallaxLayer16" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer16"]
position = Vector2(1042, 320)
scale = Vector2(-0.837467, 0.875)
texture = ExtResource("13_f6416")

[node name="ParallaxLayer17" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer17"]
position = Vector2(1038, 415)
scale = Vector2(-0.921416, 0.896986)
texture = ExtResource("14_cuyqt")

[node name="ParallaxLayer18" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer18"]
position = Vector2(1039, 505)
scale = Vector2(-0.545455, 1)
texture = ExtResource("15_u02yh")

[node name="ParallaxLayer9" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer9"]
position = Vector2(165, 469)
texture = ExtResource("16_nwtr3")

[node name="ParallaxLayer10" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer10"]
position = Vector2(446, 468)
texture = ExtResource("16_nwtr3")

[node name="ParallaxLayer11" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer11"]
position = Vector2(738, 461)
texture = ExtResource("16_nwtr3")

[node name="ParallaxLayer12" type="ParallaxLayer" parent="ParallaxBackground"]
motion_scale = Vector2(0, 0)

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer12"]
position = Vector2(1015, 463)
texture = ExtResource("16_nwtr3")

[node name="MenuContainer" type="MarginContainer" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleMargin" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 24

[node name="TitleContainer" type="Control" parent="MenuContainer/TitleMargin"]
layout_mode = 2
mouse_filter = 2

[node name="TitleLabel" type="Label" parent="MenuContainer/TitleMargin/TitleContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 278.0
offset_top = 22.0
offset_right = 852.0
offset_bottom = 89.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("17_xxu4m")
theme_override_font_sizes/font_size = 40
text = "Strit faiter"
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("18_x2g7x")

[node name="SubTitleMargin" type="MarginContainer" parent="MenuContainer"]
layout_mode = 2
theme_override_constants/margin_top = 92

[node name="SubTitleContainer" type="Control" parent="MenuContainer/SubTitleMargin"]
layout_mode = 2
mouse_filter = 2

[node name="SubTitleLabel" type="Label" parent="MenuContainer/SubTitleMargin/SubTitleContainer"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_left = 518.0
offset_top = 31.0
offset_right = 611.0
offset_bottom = 65.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "ARCADE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 109.0
offset_top = 204.0
offset_right = 181.0
offset_bottom = 244.0

[node name="Anime 1" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Anime 1"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_left = 392.0
offset_top = 208.0
offset_right = 464.0
offset_bottom = 248.0

[node name="Anime 2" type="Button" parent="VBoxContainer2"]
layout_mode = 2
text = "Anime 2"

[node name="VBoxContainer3" type="VBoxContainer" parent="."]
offset_left = 654.0
offset_top = 201.0
offset_right = 770.0
offset_bottom = 241.0

[node name="Videojuegos 1" type="Button" parent="VBoxContainer3"]
layout_mode = 2
text = "Videojuegos 1"

[node name="VBoxContainer4" type="VBoxContainer" parent="."]
offset_left = 928.0
offset_top = 201.0
offset_right = 1044.0
offset_bottom = 241.0

[node name="Videojuegos 2" type="Button" parent="VBoxContainer4"]
layout_mode = 2
text = "Videojuegos 2"

[node name="VBoxContainer5" type="VBoxContainer" parent="."]
offset_left = 54.0
offset_top = 30.0
offset_right = 103.0
offset_bottom = 70.0

[node name="Atras" type="Button" parent="VBoxContainer5"]
layout_mode = 2
text = "Atras"

[connection signal="pressed" from="VBoxContainer/Anime 1" to="." method="_on_anime_1_pressed"]
[connection signal="pressed" from="VBoxContainer2/Anime 2" to="." method="_on_anime_2_pressed"]
[connection signal="pressed" from="VBoxContainer3/Videojuegos 1" to="." method="_on_videojuegos_1_pressed"]
[connection signal="pressed" from="VBoxContainer4/Videojuegos 2" to="." method="_on_videojuegos_2_pressed"]
[connection signal="pressed" from="VBoxContainer5/Atras" to="." method="_on_atras_pressed"]
